--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,6 @@ header {
     list-style: none;
     display: flex;
     padding: 20px;
-    
 }
 
 .navcontent li {
@@ -134,4 +133,16 @@ input[type=email] {
     background-color: #6F4E37;
     transition: .3s;
     cursor: pointer;
+}
+
+/* media queries */
+@media only screen and (max-width: 700px) {
+    nav ul {
+        position: absolute;
+        left:280px;
+    }
+
+    .navcontent li {
+        display: block;
+    }
 }
