--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* external css */
 * {
     box-sizing: border-box;
     padding: 0px;
@@ -43,7 +42,7 @@ header {
     height: 110px;
 }
 
-.navcontent .active a {
+.navcontent .activeNav a {
     color:#6F4E37;
 }
 
@@ -116,6 +115,7 @@ input[type=email] {
     box-sizing: border-box;
     border-radius: 5px;
     border: 1px solid transparent;
+    outline: none;
 }
 
 .subBtn {
@@ -124,7 +124,7 @@ input[type=email] {
     border-radius: 5px;
     background-color: white;
     font-size: 12px;
-    padding: 8px 18px;
+    padding: 9px 18px;
     color: black;
 }
 
@@ -146,3 +146,278 @@ input[type=email] {
         display: block;
     }
 }
+
+/* landing section */
+.container {
+    display: flex;
+    margin-top: 140px;
+}
+
+.containerBody {
+    width: 570px;
+    margin-left: 120px;
+    text-align: left;
+}
+
+.containerBody h2 {
+    font-size: 70px;
+    margin-bottom: 20px;
+}
+
+.tasteBtn a{
+    text-decoration: none;
+    border: 1px solid #6F4E37;
+    border-radius: 22px;
+    background-color: white;
+    font-size: 16px;
+    padding: 12px 18px;
+    color: black;
+}
+
+.tasteBtn a:hover {
+    color: white;
+    background-color: #6F4E37;
+    transition: .3s;
+}
+
+.containerBody p {
+    margin-bottom: 6px;
+    font-size: 20px;
+}
+
+.mainImg {
+    width: 723px;
+    height: 420px;
+}
+
+.mainImg img {
+    height: 100%;
+    width: 100%;
+}
+
+/* classics section */
+.classicSection {
+    padding-top: 80px;
+    color:#6F4E37;
+}
+
+.classicItems {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.classics {
+    height: 320px;
+    width: 300px;
+    padding: 20px 25px;
+    margin: 20px;
+    text-align: center;
+    box-sizing: border-box;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.classics img {
+    height: 200px;
+    width: 250px;
+    cursor: pointer;
+    transition: .3s all;
+}
+
+.classics img:hover {
+    transform: scale(1.05);
+}
+
+.classics h3 {
+    margin-top: 20px;
+    margin-bottom: 12px;
+    color: black;
+}
+
+.classics p {
+    width: 220px;
+    font-size: 15px;
+    line-height: 25px;
+}
+
+/* faq section */
+.faqs {
+    max-width: 500px;
+    margin-top: 50px;
+}
+
+.faq {
+    margin-bottom: 25px;
+    border: 1px solid #6F4E37;
+}
+
+.ques {
+    background-color: #6F4E37;
+    color: white;
+    width: 100%;
+    cursor: pointer;
+    border: none;
+    font-size: 18px;
+    padding: 16px 18px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.ques:hover {
+    background-color: #B19470;
+    transition: .3s;
+}
+
+.answer p {
+    font-size: 15px;
+    padding-top: 18px;
+    padding-left: 12px;
+    background-color: rgba(255, 255, 255, 0.69);
+    width: 480px;
+}
+
+.icon {
+    transition: transform .3s;
+}
+
+.icon.active {
+    transform: rotate(-180deg);
+}
+
+.answer {
+    max-height: 0;
+    overflow: hidden;
+}
+
+.answer.active {
+    max-height: fit-content;
+}
+
+.faqImg {
+    width: 700px;
+    height: 621px;
+}
+
+.faqImg img {
+    height: 100%;
+    width: 100%;
+}
+
+/* review section */
+
+#review {
+    padding: 20px 0;
+}
+
+.reviewContainer {
+    font-size: 26px;
+    max-width: 1240px;
+    padding: 0 60px;
+}
+
+@media (max-width: 1440px) {
+    #review {
+        padding: 70px 0;
+    }
+}
+
+#review .reviewSlider {
+    padding: 60px 0;
+}
+
+@media (max-width: 500px) {
+    #review .reviewSlider {
+        height: 450px;
+    }
+}
+
+.reviewSlide {
+    width: 600px;
+    height: 280px;
+    position: relative;
+    background-color: #6F4E37;
+    margin-bottom: 30px;
+}
+
+@media (max-width: 500px) {
+    .reviewSlide {
+        width: 280px;
+        height: 360px;
+    }
+}
+
+.reviewContent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #ffffff;
+    padding: 140px 50px 50px 30px;
+    text-align: center; 
+}
+
+.reviewContent p {
+    margin-bottom: 30px;
+}
+
+.reviewContent h4 {
+    margin-bottom: 50px;
+}
+
+.reviewBtn {
+    border: none;
+    background-color: white;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+}
+
+.reviewBtn img {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.reviewBtn.activeReview {
+    width: 100px;
+    height: 100px;
+}
+
+.reviewSlider-control {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.reviewSlider-control .swiper-pagination .swiper-pagination-bullet-active {
+    background: #6F4E37;
+}
+
+/* media queries */
+@media only screen and (max-width: 700px) {
+    .container {
+        flex-direction: column-reverse;
+    }
+    .mainImg img{
+        margin-left: 40px;
+    }
+    .containerBody {
+        margin-top: 170px;
+        flex-wrap: wrap;
+    }
+    .containerBody h2 {
+        padding-bottom: 24px;
+    }
+    .containerBody p {
+        font-size: 40px;
+        margin-bottom: 20px;
+    }
+    .tasteBtn a {
+        font-size: 36px;
+    }
+}
+
