--- a/css/style.css
+++ b/css/style.css
@@ -397,6 +397,9 @@ input[type=email] {
     background: #6F4E37;
 }
 
+/* gallery section */
+
+
 /* media queries */
 @media only screen and (max-width: 700px) {
     .container {
