--- a/css/style.css
+++ b/css/style.css
@@ -398,7 +398,10 @@ input[type=email] {
 }
 
 /* gallery section */
-
+.galleryVid {
+    display: flex;
+    justify-content: space-evenly;
+}
 
 /* media queries */
 @media only screen and (max-width: 700px) {
