--- a/css/style.css
+++ b/css/style.css
@@ -368,8 +368,15 @@ input[type=email] {
 
 /* faq section */
 .faqs {
-    max-width: 500px;
+    display: flex;
+    flex-direction: column;
     margin-top: 50px;
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    .faqs {
+        width: 300px;
+    }
 }
 
 .faq {
@@ -420,9 +427,15 @@ input[type=email] {
     max-height: fit-content;
 }
 
-.faqImg img{
-    width: 700px;
-    height: 621px;
+.faqImg img {
+    width: 100%;
+    height: 620px;
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    .faqImg img {
+        width: 350px;
+    }
 }
 
 /* review section */
@@ -574,7 +587,7 @@ input[type=email] {
         flex-direction: row;
         flex-wrap: wrap;
     }
-  }
+}
 
 @media (min-width: 1025px) {
     .teamContainer{
