--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ header {
 
 .infoImg img {
     width: 100%;
-    height: 660px;
+    /* height: 660px; */
 }
 
 .infoBody {
@@ -216,8 +216,13 @@ header {
 }
 
 .infoBody h2 {
-    font-size: 50px;
+    font-size: 55px;
     color:#6F4E37;
+}
+
+.infoBody p {
+    margin-bottom: 6px;
+    font-size: 20px;
 }
 
 .infoTab {
@@ -226,16 +231,13 @@ header {
     font-weight: bold;
     cursor: pointer;
     margin: 20px 0;
+    padding-right: 50px;
 }
 
-.infoTitle.activeTitle {
+.infoTitle:hover, .infoTitle.activeTitle {
     border-style: groove;
     border-color: #6F4E37;
     border-width: 0 0 2px 0;
-}
-
-.infoContent p{
-    padding: 0 6px 8px 6px;
 }
 
 .infoContent {
@@ -244,6 +246,43 @@ header {
 
 .infoContent.activeContent {
     display: block;
+}
+
+/* @media (min-width: 769px) and (max-width: 1024px) {
+    .infoContainer {
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+    .infoImg img {
+        width: 400px;
+    } 
+    .infoBody {
+        text-align: left;
+        padding-right: 100px;
+    }
+    .infoTab {
+        justify-content: space-between;
+        padding: 0 50px;
+    }
+} */
+
+@media (min-width: 1025px) {
+    .infoContainer {
+        flex-direction: row;
+        justify-content: space-evenly;
+        padding: 0 118px;
+    }
+    .infoImg img {
+        width: 565px;
+    } 
+    .infoBody {
+        text-align: left;
+        padding-left: 100px;
+    }
+    .infoTab {
+        justify-content: space-between;
+        /* padding-right: 50px; */
+    }
 }
 /* ======= info section ends ======== */
 
@@ -267,7 +306,7 @@ header {
         flex-direction: row;
         flex-wrap: wrap;
     }
-  }
+}
 
 @media (min-width: 1025px) {
     .row{
